name:                http-ece
version:             0.1.0.0
synopsis:            HTTP Encrypted Content Encoding
description:         Please see README.md
homepage:            http://github.com/githubuser/http-ece#readme
license:             BSD3
license-file:        LICENSE
author:              Aaron Marks
maintainer:          nymacro@gmail.com
copyright:           2016 Aaron Marks
category:            Web
build-type:          Simple
cabal-version:       >=1.10

                     
library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind
  exposed-modules:     Network.HTTP.ECE
                     , Network.HTTP.ECE.Shared
                     , Network.HTTP.ECE.DH
                     , Network.HTTP.ECE.Key
  build-depends:       base >= 4.7 && < 5
                     , cryptonite
                     , bytestring
                     , memory
                     , binary
                     , attoparsec
                     , base64-bytestring
                     , http-types
                     , text
                     , containers
                     , either

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             TestMain.hs
  other-modules:       DHSpec
                     , ECESpec
                     , KeySpec
  ghc-options:         -Wall -fno-warn-unused-do-bind
  default-language:    Haskell2010
  build-depends:       base
                     , http-ece
                     , hspec
                     , cryptonite
                     , bytestring
                     , memory
                     , base64-bytestring
                     , base16-bytestring
                     , hspec
                     , http-types
                     , case-insensitive
                     , text
